<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ShowMoviesActivity"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center"
        android:background="@drawable/ghost">

    <TextView
            android:text="What to Watch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:textSize="36sp"
            android:textStyle="bold"
            android:paddingBottom="32dp"
            android:textColor="#535353" />

    <TextView
            android:text="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvName"
            android:fontFamily="@font/lato"
            android:textSize="18sp"
            android:textStyle="bold" />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/tvEditName"
            android:fontFamily="@font/montserrat" />

    <TextView
            android:text="@string/genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvGenre"
            android:fontFamily="@font/lato"
            android:textSize="18sp"
            android:textStyle="bold" />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/tvEditGenre"
            android:fontFamily="@font/montserrat" />


    <TextView
            android:text="@string/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvDescription"
            android:fontFamily="@font/lato"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingTop="8dp" />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/tvEditDescription"
            android:fontFamily="@font/montserrat" />

    <TextView
            android:text="Date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvDate"
            android:fontFamily="@font/lato"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingTop="8dp" />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/tvEditDate"
            android:fontFamily="@font/montserrat"
            android:text="@string/yyyy_mm_dd"
            android:focusable="false"
            android:clickable="true"
            android:cursorVisible="false"
            android:focusableInTouchMode="false" />

    <TextView
            android:text="@string/stars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvStars"
            android:fontFamily="@font/lato"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingTop="8dp" />

    <RatingBar
            android:id="@+id/ratingBar"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1.0"
            android:rating="0"
            android:progressTint="#3A3A3A"
            android:paddingTop="4dp"
            android:layout_width="wrap_content" />

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">

        <Button
                android:text="@string/insert"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnUpdate"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:fontFamily="@font/lato_bold"
                android:background="@drawable/login_button_bk"
                app:backgroundTint="#00FFFFFF"
                app:backgroundTintMode="src_over" />

        <Button
                android:text="@string/show_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnDelete"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:fontFamily="@font/lato_bold"
                android:background="@drawable/login_button_bk"
                app:backgroundTint="#00FFFFFF"
                app:backgroundTintMode="src_over" />

    </LinearLayout>


</LinearLayout>